...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" name="YP Background "/>
                                        <connections>
                                            <outlet property="cellImage" destination="h30-Q2-32o" id="ic9-UY-3TA"/>
                                            <outlet property="dateLabel" destination="k0F-JA-2AN" id="oAy-pA-hJC"/>
                                            <outlet property="likeButton" destination="6Qy-sO-41Z" id="Pbc-RJ-Ufe"/>
                                            <segue destination="r9C-kO-Qg3" kind="presentation" identifier="ShowSingleImage" trigger="accessoryAction" id="iQi-xR-VwF"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="ukJ-Sl-vO3"/>
...
                                <color key="backgroundColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="PMa-xf-aq2"/>
                                    <constraint firstAttribute="width" constant="60" id="tuv-Hh-Lmx"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z9C-RK-cB9">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="dZ7-wM-Ztv"/>
                                </constraints>
...
                                    <constraint firstAttribute="width" constant="393" id="SPD-Ak-Ap9"/>
                                </constraints>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="WwL-ux-mhI"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstAttribute="bottom" secondItem="jtx-3s-F0p" secondAttribute="bottom" id="2Ja-dh-B2h"/>
                            <constraint firstItem="ol4-77-1OK" firstAttribute="leading" secondItem="PGC-0p-l6K" secondAttribute="leading" id="5X8-cc-ZGW"/>
                            <constraint firstItem="429-dJ-XTT" firstAttribute="leading" secondItem="WwL-ux-mhI" secondAttribute="leading" id="HIZ-1A-RNW"/>
                            <constraint firstAttribute="trailing" secondItem="jtx-3s-F0p" secondAttribute="trailing" id="MBC-au-GVy"/>
                            <constraint firstItem="jtx-3s-F0p" firstAttribute="top" secondItem="PGC-0p-l6K" secondAttribute="top" id="Ns2-Ad-nKb"/>
...
