...
        let button = UIButton.systemButton(
            with: UIImage(named: "logout_button")!,
            target: self,
            action: #selector(self.didTapButton)
        )
        button.tintColor = .ypRed
        button.accessibilityIdentifier = "logoutButton"

        
        button.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(button)
        
        button.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor, constant: -20).isActive = true
...
     func showAlert() {
         DispatchQueue.main.async { [weak self] in
             guard let self else { return }
             let alertModel = AlertModel(
                 title: "Выход",
                 message: "Уверены, что хотите выйти?",
                 buttonText: "Да",
                 completion: { self.presenter?.resetAccount() },
                 secondButtonText: "Нет",
                 secondCompletion: { self.dismiss(animated: true) }
             )
             self.alertPresenter?.showAlert(for: alertModel)
         }
...
