...
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        scrollView.minimumZoomScale = 0.1
        scrollView.maximumZoomScale = 1.25
        backToGallery.accessibilityIdentifier = "backtoGallery"
        imageView.image = image
        alertPresenter = AlertPresenter(viewController: self)
        downloadImage()
        guard let image else { return }
        rescaleAndCenterImageInScrollView(image: image)
        
...
